--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Redux App</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Arrow Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
